# lawyer_chatbot_leptos

./: .gitignore  Cargo.toml
src/: app.rs  main.rs
src/Components/: chatbox.rs  complete_chatbox.rs  mod.rs
