[package]
name = "lawyer_chatbot"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.14", features = ["csr"] }
trunk = "0.21.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["KeyboardEvent"] }
reqwest = { version = "0.12.24", features = ["json"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
